search bug
